--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         glide_version = "4.11.0"
         dagger_version = "2.29.1"
         navigation_version = "2.3.0"
+        nav_version = "2.3.1"
     }
     repositories {
         google()
@@ -18,6 +19,8 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
+
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
 
         // NOTE: Do not place your application dependencies here; they belong
