--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,12 @@ dependencies {
     // If you use the support libraries
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
+    // Google Maps
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+
+
+
+
 }
